--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <form>
                     <div class="form-group">
                         <input id="lbsInput" type="number" class="form-control form-control-lg"
-                            placeholder="Enter Pounds...">
+                            placeholder="Enter Pounds..">
                     </div>
                 </form>
                 <div id="output">
